2000-01-22  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: Use AC_CHECK_TYPES((s_char)) instead of
	AC_CHECK_TYPE.
	(ac_cv_var_kernel_fll_bug): Generic_106541-08 is apparently OK, too.

	* scripts/Makefile.am (EXTRA_DIST): Need to explicitly distribute
	mkver.in and ntpver.in now, apparently.
	* configure.in: Search for the various audio_info members so the
	printing in audio_show is less of a circus.  This required an
	autoconf upgrade.  Major sigh.

	* libntp/audio.c (audio_show): Clean up (more) properly.

2000-01-21  Sven Dietrich <sven_dietrich@trimble.com>

	* Add pointer to html/hints/winnt.htm to INSTALL file
	* Fix NT makefiles to accomodate at least one weird
	  version of Visual C that can't handle the LFs without
	  the DOS CR also.

2000-01-20  Sven Dietrich <sven_dietrich@trimble.com>

	* Update Copyright in Palisade driver to 2000
	* Fix Palisade MIN & MAX POLL to optimal values

2000-01-19  Harlan Stenn  <stenn@whimsy.udel.edu>

	* html/driver7.htm: Patches from Dave Mills
	* html/driver36.htm: Patches from Dave Mills

	* html/copyright.htm: Added Kamal Mostafa

2000-01-19  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 4.0.99b

2000-01-18  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ntpd/refclock_chu.c: NCHAN is used with generic ICOM.

	* ntpd/refclock_wwv.c: Use new auido stuff
	* ntpd/refclock_irig.c: Use new audio stuff
	* ntpd/refclock_chu.c: Use new audio stuff
	* ntpd/ntp_proto.c: Clean up
	* ntpd/ntp_loopfilter.c (local_clock): Clean up error message
	* include/icom.h: Number of arguments changed
	* libntp/Makefile.am (libntp_a_SOURCES): Added audio.c
	* libntp/audio.c: New file
	* include/Makefile.am (noinst_HEADERS): audio.h added
	* include/audio.h: New file
	From: Dave Mills <mills@udel.edu>

	* scripts/freq_adj: Added.  FreeBSD frequency adjustment script.

	* configure.in: Do a better job on my oncore_ok check for SCO.

2000-01-15  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 4.0.99a
