@@ -1,2 +1,1 @@
 noinst_SCRIPTS = mkver ntpver
-EXTRA_DIST = mkver.in ntpver.in
