@@ -1,3 +1,8 @@
+2000-01-23  Harlan Stenn  <stenn@whimsy.udel.edu>
+
+	* configure.in (AC_OUTPUT): Revert to obsolete form until automake
+	catches up.
+
 2000-01-22  Harlan Stenn  <stenn@whimsy.udel.edu>
 
 	* configure.in: Use AC_CHECK_TYPES((s_char)) instead of
